add Docker, CI/CD pipeline, environment config and Railway deployment